gobotany/static/css/styles.css
/* ... */
#advanced-map #plant-map-list {
	margin: 15px 0;	
}
#advanced-map #plant-map-list .plant-group {
  	cursor: pointer;
	float: left;
	margin: 0 10px 10px 0;
    padding: 14px 0 0 0;
    width: 110px;
}
#advanced-map #plant-map-list .plant-group.last {
	margin: 0 0 10px 0;	
}
#advanced-map #plant-map-list .plant-group.multi-line {
	padding: 0;	
}
#advanced-map .plant-group h5 {
	color: #508e31;
    font-size: 12px;
  	line-height: 120%;
    margin: 0 0 0 0;
	padding: 6px 0 6px 5px;
}
#advanced-map .plant-group div.image,
#advanced-map .plant-subgroup div.image {
	position: relative;	
}
#advanced-map .plant-group .frame {
	border: 5px solid rgba(255, 255, 255, 0.8);
	height: 91px;	
	position: absolute;
	top: 0;
	width: 100px;
	z-index: 100;
}
#advanced-map .plant-group.active .frame {
	border-color: #1a2e12;
}
#advanced-map .plant-group.active h5 {
	background: #1a2e12;
	color: #fff;
}
/* Don't include hover states on smartphones and tablets. */
@media only screen and (min-device-width:1025px) {
    #advanced-map .plant-group:hover .frame {
	    border-color: #1a2e12;
    }
    #advanced-map .plant-group:hover h5 {
	    background: #1a2e12;
	    color: #fff;
    }
    #advanced-map .more-info:hover {
        color: #508e31;
        text-decoration: underline;
    }
}
#advanced-map .plant-group .img-container {
	height: 101px;
	overflow: hidden;
    width: 110px;
	box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
	-moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
	-webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
}
#advanced-map #main .plant-group p.more-info {
	background: url(/static/images/icons/more-info.png) left 4px no-repeat transparent;
	margin: 5px 0 0 0;
	padding: 0 0 0 19px;
}

#advanced-map .plant-subgroup {
   	cursor: default;
    float: left;
   	margin: 0 11px 11px 0;
	padding: 17px 0 0 0;
	width: 160px;
}
#advanced-map .plant-subgroup.last {
    margin-right: 0;
}

#advanced-map .plant-subgroup .frame {
  	border: 5px solid #1a2e12;
	height: 129px;	
	position: absolute;
	top: 0;
	width: 150px;
	z-index: 100;
}

#advanced-map .plant-subgroup h5 {
	background: #1a2e12;
	color: #fff;
    font-size: 13px;
    height: 30px;
	line-height: 120%;
	margin: 0 0 0 0;
	padding: 6px;
}
#advanced-map .plant-subgroup .img-container {
	height: 139px;
	overflow: hidden;
	width: 160px;
}
#advanced-map #main .plant-subgroup p.more-info {
	background: url(/static/images/icons/more-info.png) left 4px no-repeat transparent;	
	margin: 5px 0 0 0;
	padding: 0 0 0 19px;
}
#advanced-map a.choose-btn {
	background: url(/static/images/layout/choose-btn.png) 0 0 no-repeat transparent;
	display: block;
	height: 32px;
	margin: 10px 0 5px;
	text-indent: -9000px;
	width: 104px;
}
#advanced-map a.choose-btn:hover {
	background-position: 0 -32px;
}
#advanced-map a.choose-btn:active {
	background-position: 0 -64px;
}



/* Shadowbox close button */
#sb-nav-close {
    background-position: center;
    background-repeat: no-repeat;
    padding: 12px; /* Increase click target area */
    right: -20px !important; /* Place at top right corner */
    top: 6px !important;
}

/*** Notification for draft status ***/

#notify {
    color: ##d4ee3b;
    font-size: 100%;
    font-weight: bold;
    height: 0;
    left: 0;
    position: fixed;
    text-align: center;
    top: 0;
    width: 100%;
    z-index: 120;
}
#notify div {
    background-color: #e39f19;
    border-bottom: 1px solid #d6800c;
    color: #735005;
    padding: 7px 0;
}

